2008-10-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add missing IANA-registered mimetype
	application/vnd.oasis.opendocument.chart-template
	and correct the use of <acronym> in all oasis mimetypes, which
	is meant to explain an acronym used in <comment>, not the extension.

2008-10-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix RDF mime-type, spotted by
	Sebastian Trüg <trueg@kde.org> (Closes: #18088)

2008-10-12  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Fix building when srcdir != builddir,
	patch by Yevgeniy <YLitvinenko@astana.oilfield.slb.com>
	(Closes: #18026)

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* tests/tree-list: Add another test for video DVDs

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Clarify some statements to
	include "of the same weight" when talking about comparisons,
	patch from David Faure <dfaure@trolltech.com>

2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Only use *.ogg for audio Oggs
	(Closes: #12890)
	* tests/list:
	* tests/test.ogg: Add a test ogg vorbis file

2008-08-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/ccfilm.axv:
	* tests/list: Add Annodex mime-types, from
	http://www.annodex.net/TR/annodex.html#anchor15

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix priority of the SMIL detection
	so it's lower than that of SMILtext media links (See
	http://bugzilla.gnome.org/show_bug.cgi?id=518688#c4)
	* tests/hbo-playlist.qtl: Add a test file for the above
	* tests/list:

2008-08-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/smil+xml as
	an alias for application/smil, as used at
	http://www.cartalk.com/Radio/Show/online.html

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Force recreating the pot file when running make

=== shared-mime-info 0.51 ===
