@@ -865,6 +865,21 @@ command to generate the output files.
     </magic>
     <glob pattern="*.odf"/>
   </mime-type>
+  <mime-type type="application/vnd.oasis.opendocument.formula-template">
+    <_comment>ODF template</_comment>
+    <acronym>ODF</acronym>
+    <expanded-acronym>OpenDocument Formula</expanded-acronym>
+    <sub-class-of type="application/zip"/>
+    <generic-icon name="x-office-document"/>
+    <magic priority="50">
+      <match type="string" value="PK\003\004" offset="0">
+        <match type="string" value="mimetype" offset="30">
+          <match type="string" value="application/vnd.oasis.opendocument.formula-template" offset="38"/>
+        </match>
+      </match>
+    </magic>
+    <glob pattern="*.otf"/>
+  </mime-type>
   <mime-type type="application/vnd.oasis.opendocument.database">
     <_comment>ODB database</_comment>
     <acronym>ODB</acronym>
